# rtp_image_processor

./: .gitignore  CMakeLists.txt  README_ROS2.md  package.xml
examples/: main.cpp
include/: image_processor.h
launch/: multi_camera.launch.xml  rtp_image_processor.launch.py  rtp_image_processor.launch.xml
src/: image_processor.cpp  image_processor_impl.cpp  rtp_image_processor_node.cpp
tests/: CMakeLists.txt  test_image_processor.cpp
